Fixed single cell focus ring not visible in range selection mode and overlay examples  (#3293)

--- a/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
+++ b/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
@@ -417,6 +417,7 @@
   }
 
   .ag-ltr {
+    .ag-cell-range-single-cell,
     .ag-cell-focus:not(.ag-cell-range-selected):focus-within {
       outline: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle)
         var(--salt-focused-outlineColor);
